# Homeworks_DRF

./: env_example  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  paginatiors.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_preview.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_alter_course_options_alter_lesson_options_and_more.py  0006_course_price.py  0007_alter_course_price.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: fillBD.py
users/migrations/: 0001_initial.py  0002_user_image_user_phone_user_town_alter_user_email_and_more.py  0003_alter_user_options.py  0004_alter_user_image_payment.py  0005_alter_payment_paid_course_alter_payment_paid_lesson_and_more.py  0006_alter_payment_paid_course_alter_payment_paid_lesson.py  0007_alter_payment_user.py  0008_alter_payment_options.py  0009_alter_payment_amount_alter_payment_payment_type_and_more.py  0010_payment_url_alter_payment_amount_and_more.py
