[tool.poetry]
name = "homeworks_drf"
version = "0.1.0"
description = ""
authors = ["AlexanderPshenichnyy <ter.anti@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
